# dev-sandbox

./: .gitignore
.idx/: dev.nix  mcp.docker.json  mcp.local.json
github_issue_lister_agent/: ae-agent.py  agent.py  pyproject.toml  requirements.txt
github_issue_lister_agent_vllm/: README.md  pyproject.toml  requirements.txt
github_issue_lister_agent_vllm/github_agent/: agent.py
github_issue_lister_cli/: mcp-typer.py  mcp.json  pyproject.toml
github_issue_lister_mcp/: pyproject.toml  server.py
